# ChangeLog for dev-python/guppy
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/ChangeLog,v 1.6 2008/03/12 18:01:42 phreak Exp $

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

*guppy-0.1.6 (09 Nov 2006)

  09 Nov 2006; Marien Zwart <marienz@gentoo.org> +guppy-0.1.6.ebuild:
  Version bump.

  06 Jun 2006; Carsten Lohrke <carlo@gentoo.org> guppy-0.1.3.ebuild:
  Fix use of nonexistent versioned virtual/python.

  03 Apr 2006; Aron Griffis <agriffis@gentoo.org> guppy-0.1.3.ebuild:
  Remove ~ia64 since it segfaults in src_test, thanks to marienz for pointing
  this out

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> guppy-0.1.3.ebuild:
  Mark 0.1.3 ~ia64

*guppy-0.1.3 (24 Mar 2006)

  24 Mar 2006; Marien Zwart <marienz@gentoo.org>
  +files/guppy-0.1.3-skip-tests.patch, +metadata.xml, +guppy-0.1.3.ebuild:
  New ebuild.
