@@ -2,16 +2,16 @@
 Hash: SHA1
 
 AUX guppy-0.1.3-skip-tests.patch 685 RMD160 2ae1581257e3486e0fd94db12cbe6e3f3bcca28d SHA1 bdee8ad9912d2431652ffcaede6f4308a5b6e9b4 SHA256 af22a91cad5bf481f3161dde1086a1e3ec9d9109f053eb4fac15163567a9160f
-DIST guppy-0.1.3.tar.gz 453152 RMD160 d0d2e1b6d734bf1ecb9791120b23edb245b1e80a SHA1 a5b0d7e9dc42e512dfce965db67bf3e062711aeb SHA256 ff4bf318d67086d95800ebad1af137348834bea556bf804f0fa64680a8b950f3
 DIST guppy-0.1.6.tar.gz 461834 RMD160 b109507648fec72b191c13e1bce82f93409a2b56 SHA1 6a8facded8d7d149f23e43ed9d514c42ce4c1d78 SHA256 a8a439237c661e52e8ebbe8e5daee6f9dd029e3624b5977cec7be3a5f99155aa
-EBUILD guppy-0.1.3.ebuild 851 RMD160 321b89f028023127d4c6af6ad373ade5fbf5601b SHA1 1e4b27119251c2dee7cae0a1340855ff6c0a4819 SHA256 8a1bb39a561822a1d004d78f30e48768cb10e58014346abfaf511974d3191a51
-EBUILD guppy-0.1.6.ebuild 762 RMD160 46aa8bdb86c088a4d8a8d9ad6822f585dfc27f96 SHA1 53716adc931f3d62f7fb9cec253874f8550547d7 SHA256 4f8029a2355a2118f6fc455648ee4c0e4d7a5667e21e622c0cb12ba8008a1193
-MISC ChangeLog 985 RMD160 18a342febb85c18d4d51f0f02e2d40f7f15e6b78 SHA1 93c1fd60abe58cffe8107ec4b4ed3deb467f1003 SHA256 388b7cb739a641a3fb8eda0063b811fe3917e6ee372b2341eb9d2546dd56d287
+DIST guppy-0.1.8.tar.gz 471028 RMD160 0735d31f781cdcd39ca092381b9ebb68c69a3e84 SHA1 76c06dc9af0bdbe16be124d7d06109753181dbcd SHA256 d4b243cc3417e1442d2855b7317be7da577eae7c09eac0f2e4d5c24335dcd4da
+EBUILD guppy-0.1.6.ebuild 763 RMD160 e426b6122a6ebbac0fb152359de2a700745e5a40 SHA1 cc4deeb60d1027606fc080fb25a32d1c83ab6a86 SHA256 8cb2b5d24b25727bc8a427a26245024c63f49b2b7ad5893d3b8ae087c1a346ca
+EBUILD guppy-0.1.8.ebuild 778 RMD160 4e3a43f92f5804ee58a09d6b2e177c99fd4826c5 SHA1 d92e53b26ac8ab36e254ae7fc4d1436f117adf07 SHA256 8a344e83fd871ebb9622fe42e0b58238f3dfc45be50c16aa58c6295c5d01f5f7
+MISC ChangeLog 1146 RMD160 b0555738e4d1a2f6061df872be0ee9a1cd3d3cad SHA1 637296062ee383fcd99c5b5e4845c54a412baf0a SHA256 0b9ff548cbb627a495ecff7168362af2ace9262fbd7f8fe8ec254e166db641ab
 MISC metadata.xml 495 RMD160 978415e5eb097afef9b14fc03c6b6b9df76f9fd5 SHA1 79e09a94d7f0cb90696d4a6df72aa50732c19674 SHA256 dd1a4345ad31b04cb7cbe88003e7561b4d94b7149f9a50da07fe9f5940944d07
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFH2BqLyuNVb5qfaOYRAv2RAKDEVC3LS//wj0KeJ95ANpY/BjRG2gCgvs9/
-qDwUdlWpDREa63qZ0gau0vI=
-=Qx8H
+iEYEARECAAYFAkhbXGoACgkQ8aihIaC/zgDlegCgnB61dFNMWR+mCb+ok91ycdAn
+XlcAn0z2zPzFshPIhRXH6juNSBIiwYCw
+=i2B2
 -----END PGP SIGNATURE-----
