@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/Attic/guppy-0.1.6.ebuild,v 1.2 2007/07/11 06:19:47 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/Attic/guppy-0.1.6.ebuild,v 1.3 2008/06/20 07:29:29 pythonhead Exp $
 
 NEED_PYTHON=2.3
 
