@@ -1,14 +1,14 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/Attic/guppy-0.1.3.ebuild,v 1.4 2006/06/06 22:27:26 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/Attic/guppy-0.1.8.ebuild,v 1.1 2008/06/20 07:29:29 pythonhead Exp $
 
 NEED_PYTHON=2.3
 
-inherit distutils eutils
+inherit distutils
 
 DESCRIPTION="Guppy-PE -- A Python Programming Environment"
 HOMEPAGE="http://guppy-pe.sourceforge.net/"
-SRC_URI="http://guppy-pe.sourceforge.net/${P}.tar.gz"
+SRC_URI="http://pypi.python.org/packages/source/g/${PN}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
@@ -16,12 +16,6 @@ KEYWORDS="~x86"
 IUSE=""
 
 DOCS="ANNOUNCE changelog"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	epatch "${FILESDIR}/${P}-skip-tests.patch"
-}
 
 src_test() {
 	"${python}" setup.py install --home="${T}/test" || die "test install failed"
