@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/guppy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/ChangeLog,v 1.6 2008/03/12 18:01:42 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/guppy/ChangeLog,v 1.7 2008/06/20 07:29:29 pythonhead Exp $
+
+*guppy-0.1.8 (20 Jun 2008)
+
+  20 Jun 2008; Rob Cakebread <pythonhead@gentoo.org> -guppy-0.1.3.ebuild,
+  +guppy-0.1.8.ebuild:
+  Version bump, removed older.
 
   12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing Marien Zwart (marienz, #107204) from metadata.xml.
